Added the deleted flag and message to the Query objects and to the query inspect view

--- a/openrem/remapp/templates/remapp/dicomquerydetails.html
+++ b/openrem/remapp/templates/remapp/dicomquerydetails.html
@@ -43,7 +43,7 @@
                     </td>
                     <td>
                         <a href="{% url 'get_query_series' qstudy.pk %}">
-                            Not present yet
+                            {{qstudy.deleted_reason}}
                         </a>
                     </td>
                 </tr>
