--- a/openrem/remapp/templates/remapp/dicomquerydetails.html
+++ b/openrem/remapp/templates/remapp/dicomquerydetails.html
@@ -18,8 +18,10 @@
     <div class="col-md-8">
         <h4>
             This table shows all the studies that the remote PACS/DICOM node sent and where
-            considered for downloading (moving). Click on any study to see the series that 
-            were found for this study. <a href="{% url 'get_query_summary' %}">
+            considered for downloading (moving). Note that studies that are present on the remote
+            will not be shown here if their modality type was not selected for downloading.
+            Click on any study to see the series that were found for this study. 
+            <a href="{% url 'get_query_summary' %}">
                 Back to the query overview.
             </a>
         </h4>
