Added NM specific information to review page

--- a/openrem/remapp/templates/remapp/review_study.html
+++ b/openrem/remapp/templates/remapp/review_study.html
@@ -15,3 +15,6 @@
 <td>{{ eventdetector |safe }}</td>
 <td>{{ eventsource |safe }}</td>
 <td>{{ eventmech |safe }}</td>
+<td>{{ radiopharm_template |safe }}</td>
+<td>{{ radiopharm_dose |safe }}</td>
+<td>{{ radiopharm_petseries |safe }}</td>
