More complete descriptions, there is a link to the details on the import page, ...

--- a/openrem/remapp/templates/remapp/dicomqueryimages.html
+++ b/openrem/remapp/templates/remapp/dicomqueryimages.html
@@ -25,7 +25,7 @@
             </tr>
             {% for image in queryimages %} 
                 <tr>
-                    <td>{{image.sop_instance_uid}}</td>
+                    <td>{{image.sop_class_uid}}</td>
                     <td>{{image.deleted_reason}}</td>
                 </tr>
             {% endfor %}
