--- a/openrem/remapp/templates/remapp/dicomquerydetails.html
+++ b/openrem/remapp/templates/remapp/dicomquerydetails.html
@@ -17,13 +17,20 @@
 <div class="row">
     <div class="col-md-8">
         <h4>
-            This table shows all the studies that the remote PACS/DICOM node sent and where
-            considered for downloading (moving). Note that studies that are present on the remote
-            will not be shown here if their modality type was not selected for downloading.
-            Click on any study to see the series that were found for this study. 
-            <a href="{% url 'get_query_summary' %}">
-                Back to the query overview.
-            </a>
+            <p>
+                This table shows all the studies that the remote PACS/DICOM node sent and where
+                considered for downloading (moving). Click on any study to see the series that were found for this study.
+            </p><p>
+                Note that studies that are present on the remote 
+                will not be shown here if their modality type was not selected for downloading. Similarly
+                they will not be shown if they were filtered because their date does not match,
+                since those things are filtered already on the remote node. To see all studies sent by the
+                remote hence enable all modalities and set no date at all.
+            </p><p>
+                <a href="{% url 'get_query_summary' %}">
+                    Back to the query overview.
+                </a>
+            </p>
         </h4>
         <table class="table table-bordered table-hover row-clickable table-sortable">
             <tr>
