--- a/openrem/remapp/templates/remapp/displaynameview.html
+++ b/openrem/remapp/templates/remapp/displaynameview.html
@@ -38,7 +38,8 @@
       {% endif %}
       <p>
         Jump to <a href="#ct">CT</a> | <a href="#fluoro">Fluoroscopy</a> |<a href="#mammo">Mammography</a> |
-        <a href="#dx">DX and CR</a> | <a href="#others">Others</a> | <a href="#failed">Failed imports</a> |
+        <a href="#dx">DX and CR</a> | <a href="#nm">NM</a> | <a href="#others">Others</a> | 
+        <a href="#failed">Failed imports</a> |
       </p>
 
     </div>
