Added study/series description to querydetails. Added better description of what's visible here

--- a/openrem/remapp/templates/remapp/dicomquerydetails.html
+++ b/openrem/remapp/templates/remapp/dicomquerydetails.html
@@ -35,6 +35,7 @@
         <table class="table table-bordered table-hover row-clickable table-sortable">
             <tr>
                 <th>Study UID</th>
+                <th>Study description</th>
                 <th>Modality</th>
                 <th>Downloaded?</th>
             </tr>
@@ -43,6 +44,11 @@
                     <td>
                         <a href="{% url 'get_query_series' qstudy.pk %}">
                             {{qstudy.study_instance_uid}}
+                        </a>
+                    </td>
+                    <td>
+                        <a href="{% url 'get_query_series' qstudy.pk %}">
+                            {{qstudy.study_description}}
                         </a>
                     </td>
                     <td>
