--- a/openrem/remapp/templates/remapp/dicomqueryimages.html
+++ b/openrem/remapp/templates/remapp/dicomqueryimages.html
@@ -10,13 +10,24 @@
 <div class="row">
     <div class="col-md-8">
         <h4>
-            This table shows all the files that the remote PACS/DICOM node sent and where
-            considered for downloading (moving). For a list of SOP classes see the 
-            <a href="https://dicom.nema.org/medical/dicom/current/output/chtml/part04/sect_B.5.html" target="_blank">
-                DICOM Standard
-            </a>. You are viewing files that are part of 
-            <a href="{% url 'get_query_series' queryseries.dicom_qr_rsp_study.pk %}">series {{queryseries.series_instance_uid}}</a>, which is a part of the 
-            study <a href=" {% url 'get_query_details' queryseries.dicom_qr_rsp_study.dicom_query.pk %}">study {{queryseries.dicom_qr_rsp_study.study_instance_uid}}</a>.
+            <p>
+                This table shows all the files that the remote PACS/DICOM node sent and where
+                considered for downloading (moving). For a list of SOP classes see the 
+                <a href="https://dicom.nema.org/medical/dicom/current/output/chtml/part04/sect_B.5.html" target="_blank">
+                    DICOM Standard
+                </a>.
+            </p>
+            <p>
+                In most cases this will not show all the images on the remote. The reason is that if OpenREM decides
+                to download a whole series it will not go checking which images are stored. Similarly if a series 
+                particularily fit for downloading is discovered, all others may be ignored without ever looking at
+                their files.
+            </p>
+            <p>
+                You are viewing files that are part of 
+                <a href="{% url 'get_query_series' queryseries.dicom_qr_rsp_study.pk %}">series {{queryseries.series_instance_uid}}</a>, which is a part of the 
+                study <a href=" {% url 'get_query_details' queryseries.dicom_qr_rsp_study.dicom_query.pk %}">study {{queryseries.dicom_qr_rsp_study.study_instance_uid}}</a>.
+            </p>
         </h4>
         <table class="table table-bordered table-hover table-sortable">
             <tr>
