--- a/openrem/remapp/templates/remapp/dicomqueryseries.html
+++ b/openrem/remapp/templates/remapp/dicomqueryseries.html
@@ -10,14 +10,22 @@
 <div class="row">
     <div class="col-md-8">
         <h4>
-            This table shows all the series that the remote PACS/DICOM node sent and where
-            considered for downloading (moving). Click on any to see which files 
-            (usually images or structured reports) where considered for downloading. You are viewing series of the study 
+            <p>
+                This table shows all the series that the remote PACS/DICOM node sent and where
+                considered for downloading (moving). Click on any to see which files 
+                (usually images or structured reports) where considered for downloading.
+            </p><p>
+                If the study was already ignored (for example because of a filter), maybe
+                the series got never asked for and hence are not listed here even if present on
+                the remote.
+            </p>
+            You are viewing series of the study 
             <a href="{% url 'get_query_details' queryseries.first.dicom_qr_rsp_study.dicom_query.pk %}">study {{queryseries.first.dicom_qr_rsp_study.study_instance_uid}}</a>.
         </h4>
         <table class="table table-bordered table-hover row-clickable table-sortable">
             <tr>
                 <th>Series UID</th>
+                <th>Series description</th>
                 <th>Modality</th>
                 <th>Downloaded?</th>
             </tr>
@@ -26,6 +34,11 @@
                     <td>
                         <a href="{% url 'get_query_images' qseries.pk %}">
                             {{qseries.series_instance_uid}}
+                        </a>
+                    </td>
+                    <td>
+                        <a href="{% url 'get_query_images' qseries.pk %}">
+                            {{qseries.series_description}}
                         </a>
                     </td>
                     <td>
