Fixed typo 'completed_successfully' in html

--- a/openrem/remapp/templates/remapp/tasks.html
+++ b/openrem/remapp/templates/remapp/tasks.html
@@ -18,7 +18,7 @@
       <td>{{  task.error|safe }}</td>
       <td>{{ task.started_at }}</td>
       {% if task.complete %} 
-        {% if task.completed_successfull %} 
+        {% if task.completed_successfully %} 
           <td>Success</td>
         {% else %} 
           <td>Failure</td>
