Minor change to link to remove security warning from sonarcloud.

--- a/openrem/remapp/templates/remapp/dicomqueryimages.html
+++ b/openrem/remapp/templates/remapp/dicomqueryimages.html
@@ -13,7 +13,9 @@
             <p>
                 This table shows all the files that the remote PACS/DICOM node sent and where
                 considered for downloading (moving). For a list of SOP classes see the 
-                <a href="https://dicom.nema.org/medical/dicom/current/output/chtml/part04/sect_B.5.html" target="_blank">
+                <a
+                        href="https://dicom.nema.org/medical/dicom/current/output/chtml/part04/sect_B.5.html"
+                        target="_blank" rel="noopener">
                     DICOM Standard
                 </a>.
             </p>
