Listing tasks newest at top. Reducing size of NM on top bar. Refs #788.

--- a/openrem/remapp/templates/base.html
+++ b/openrem/remapp/templates/base.html
@@ -65,7 +65,7 @@
                 {% endif %}
                 {% if request.user.userprofile.displayNM %}
                   {% block navnm %}
-                    <li>{% endblock %}<a href="{% url 'nm_summary_list_filter' %}">{% trans "Nuclear Medicine" %}</a></li>
+                    <li>{% endblock %}<a href="{% url 'nm_summary_list_filter' %}">{% trans "NM/PET" %}</a></li>
                 {% endif %}
             {% endblock %}
           </ul>
