--- a/openrem/remapp/templates/remapp/task_admin.html
+++ b/openrem/remapp/templates/remapp/task_admin.html
@@ -73,15 +73,15 @@
 
             sort_info_recent = {
                 heading: "started_recent",
-                direction: "ascending"
+                direction: "descending"
             };
             sort_info_older = {
                 heading: "started_older",
-                direction: "ascending"
+                direction: "descending"
             };
             sort_info_active = {
                 heading: "started_active",
-                direction: "ascending"
+                direction: "descending"
             };
 
             function tasks_update_active() {
