--- a/openrem/remapp/templates/remapp/tasks.html
+++ b/openrem/remapp/templates/remapp/tasks.html
@@ -1,4 +1,4 @@
-<table class="table sortable" id="{{ type }}" aria-describedby="Table showing running or runned tasks">
+<table class="table sortable" id="{{ type }}" aria-describedby="Table showing running tasks">
   <tr>
     <th id="uuid_{{ type }}" onclick="updateSort(this.id, 'user_click');">UUID</th>
     <th id="task_{{ type }}" onclick="updateSort(this.id, 'user_click');">Task type</th>
