--- a/openrem/remapp/templates/remapp/mgdetail.html
+++ b/openrem/remapp/templates/remapp/mgdetail.html
@@ -16,7 +16,7 @@
         {% if not generalstudymoduleattr.accession_hashed %}
             {{ generalstudymoduleattr.accession_number }}
         {% else %}
-            <i>hidden</i>
+            <em>hidden</em>
         {% endif %}
     </li>
     <li>Study date: {{ generalstudymoduleattr.study_date }}</li>
