--- a/openrem/remapp/templates/remapp/nmdetail.html
+++ b/openrem/remapp/templates/remapp/nmdetail.html
@@ -13,7 +13,7 @@
         {% if not generalstudymoduleattr.accession_hashed %}
             {{ generalstudymoduleattr.accession_number }}
         {% else %}
-            <i>hidden</i>
+            <em>hidden</em>
         {% endif %}
     </li>
     <li>Study date: {{ generalstudymoduleattr.study_date }}</li>
@@ -107,7 +107,7 @@
         <tr>
             <th scope="col">Person participant</th>
             <td>
-                <table class="table custom_table_without_top_borders">
+                <table class="table custom_table_without_top_borders" aria-describedby="Table of persons involved">
                     <tr>
                         <th>Name</th>
                         <td>{{person_participant.person_name}}</td>
@@ -159,29 +159,29 @@
 
   {% if radiopharm.petseries_set.count > 0 %} 
   <table class="table table-striped table-bordered small" aria-describedby="PET Series">
-    <tr><th>PET Series</th></tr>
+    <tr><th scope="row">PET Series</th></tr>
     <tr>
-        <th>Series date</th>
-        <th>Number of Slices</th>
-        <th>Reconstruction Method</th>
-        <th>Coincidence Window width</th>
-        <th>Energy Window Lower/Upper Limit</th>
-        <th>Scan Progression</th>
-        <th>Number of RR intervals</th>
-        <th>Number of time slots</th>
-        <th>Number of time slices</th>
+        <th scope="col">Series date</th>
+        <th scope="col">Number of Slices</th>
+        <th scope="col">Reconstruction Method</th>
+        <th scope="col">Coincidence Window width</th>
+        <th scope="col">Energy Window Lower/Upper Limit</th>
+        <th scope="col">Scan Progression</th>
+        <th scope="col">Number of RR intervals</th>
+        <th scope="col">Number of time slots</th>
+        <th scope="col">Number of time slices</th>
     </tr>
-    {% for petserie in radiopharm.petseries_set.all %} 
+    {% for petseries in radiopharm.petseries_set.all %}
         <tr>
-            <td>{{petserie.series_datetime}}</td>
-            <td>{{petserie.number_of_slices|floatformat:0}}</td>
-            <td>{{petserie.reconstruction_method}}</td>
-            <td>{{petserie.coincidence_window_width|floatformat:2}}</td>
-            <td>{{petserie.energy_window_lower_limit|floatformat:2}} / {{petserie.energy_window_upper_limit|floatformat:2}}</td>
-            <td>{{petserie.scan_progression_direction}}</td>
-            <td>{{petserie.number_of_rr_intervals|floatformat:0}}</td>
-            <td>{{petserie.number_of_time_slots|floatformat:0}}</td>
-            <td>{{petserie.number_of_time_slices|floatformat:0}}</td>
+            <td>{{petseries.series_datetime}}</td>
+            <td>{{petseries.number_of_slices|floatformat:0}}</td>
+            <td>{{petseries.reconstruction_method}}</td>
+            <td>{{petseries.coincidence_window_width|floatformat:2}}</td>
+            <td>{{petseries.energy_window_lower_limit|floatformat:2}} / {{petseries.energy_window_upper_limit|floatformat:2}}</td>
+            <td>{{petseries.scan_progression_direction}}</td>
+            <td>{{petseries.number_of_rr_intervals|floatformat:0}}</td>
+            <td>{{petseries.number_of_time_slots|floatformat:0}}</td>
+            <td>{{petseries.number_of_time_slices|floatformat:0}}</td>
         </tr>
     {% endfor %}
   </table>
