--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -65,7 +65,7 @@
                 <h3 class="panel-title">Exam filter</h3>
             </div>
             <div class="panel-body">
-                <i>Date format yyyy-mm-dd</i>
+                <em>Date format yyyy-mm-dd</em>
                 {% for field in filter.form.visible_fields %}
                     <div class="form-group">
                         <div class="col-xs-4">
