--- a/openrem/remapp/templates/remapp/mgfiltered.html
+++ b/openrem/remapp/templates/remapp/mgfiltered.html
@@ -66,7 +66,7 @@
               <h3 class="panel-title">Exam filter</h3>
             </div>
             <div class="panel-body">
-                <i>Date format yyyy-mm-dd</i>
+                <em>Date format yyyy-mm-dd</em>
                         {% for field in filter.form %}
                             <div class="form-group">
                                 <div class="col-xs-4">
