--- a/openrem/remapp/templates/remapp/nmdetail.html
+++ b/openrem/remapp/templates/remapp/nmdetail.html
@@ -129,15 +129,15 @@
   </div>
  
   {% if radioadmin.organdose_set.count > 0 %}
+  <h3>Organ doses</h3>
   <table class="table table-striped table-bordered small" aria-describedby="Organ Doses">
-      <tr><th>Organ Doses</th></tr>
       <tr>
-        <th>Finding Site</th>
-        <th>Laterality</th>
-        <th>Organ Dose (mGy)</th>
-        <th>Mass (g)</th>
-        <th>Measurement Method</th>
-        <th>Reference Authority</th>
+        <th scope="col">Finding Site</th>
+        <th scope="col">Laterality</th>
+        <th scope="col">Organ Dose (mGy)</th>
+        <th scope="col">Mass (g)</th>
+        <th scope="col">Measurement Method</th>
+        <th scope="col">Reference Authority</th>
       </tr>
     {% for organ_dose in radioadmin.organdose_set.all %} 
         <tr>
@@ -156,10 +156,11 @@
         </tr>
     {% endfor %}
   {% endif %}
+  </table>
 
-  {% if radiopharm.petseries_set.count > 0 %} 
+  {% if radiopharm.petseries_set.count > 0 %}
+  <h3>Series information</h3>
   <table class="table table-striped table-bordered small" aria-describedby="PET Series">
-    <tr><th scope="row">PET Series</th></tr>
     <tr>
         <th scope="col">Series date</th>
         <th scope="col">Number of Slices</th>
