--- a/openrem/remapp/templates/remapp/rffiltered.html
+++ b/openrem/remapp/templates/remapp/rffiltered.html
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                 {% endfor %}
-                <input class="btn btn-default" type="submit" />
+                <input class="btn btn-default" name="submit" type="submit" />
             </div>
 
             <div class="panel-heading">
