Updated DX and CR text to Radiography on Display name page. Updated Radiographic to Radiography on chart options page. Refs issue #953

--- a/openrem/remapp/templates/remapp/displaychartoptions.html
+++ b/openrem/remapp/templates/remapp/displaychartoptions.html
@@ -97,10 +97,10 @@
       </div>
 
       <div class="panel-heading">
-        <h3 class="panel-title">Radiographic chart options</h3>
+        <h3 class="panel-title">Radiography chart options</h3>
       </div>
       <div class="panel-body">
-        <table aria-describedby="Radiographic chart options">
+        <table aria-describedby="Radiography chart options">
             {% csrf_token %}
             {% for field in DXChartOptionsForm %}
                 <tr>
