--- a/openrem/remapp/templates/remapp/displaynameview.html
+++ b/openrem/remapp/templates/remapp/displaynameview.html
@@ -37,8 +37,8 @@
         </p>
       {% endif %}
       <p>
-        Jump to <a href="#ct">CT</a> | <a href="#fluoro">Fluoroscopy</a> |<a href="#mammo">Mammography</a> |
-        <a href="#dx">DX and CR</a> | <a href="#nm">Nuclear Medicine</a> | <a href="#others">Others</a> | 
+        Jump to <a href="#ct">CT</a> | <a href="#fluoro">Fluoroscopy</a> | <a href="#mammo">Mammography</a> |
+        <a href="#dx">Radiography</a> | <a href="#nm">Nuclear Medicine</a> | <a href="#others">Others</a> |
         <a href="#failed">Failed imports</a> |
       </p>
 
@@ -174,7 +174,7 @@
 {% endif %}
 
 <a id="dx" class="vert-offset">
-  <h3>DX and CR</h3>
+  <h3>Radiography</h3>
 </a>
 <span id="DX-names">Querying the database for display names, please wait</span>
 {% if admin.admingroup %}
