--- a/openrem/remapp/templates/remapp/standardnameview.html
+++ b/openrem/remapp/templates/remapp/standardnameview.html
@@ -75,7 +75,7 @@
 <span id="CT-names">Querying the database for standard names, please wait</span>
 {% if admin.admingroup %}
     <a class="btn btn-default" href="{% url 'add_name_ct' %}" role="button">Add new CT entry</a>
-    <a class="btn btn-default" href="{% url 'update_all_std_names' modality='CT' %}" role="button">Update database for all CT entries</a>
+    <a class="btn btn-default" href="{% url 'update_all_std_names_form' modality='CT' %}" role="button">Update database for all CT entries</a>
 {% endif %}
 
 <a id="fluoro" class="vert-offset">
@@ -84,7 +84,7 @@
 <span id="RF-names">Querying the database for standard names, please wait</span>
 {% if admin.admingroup %}
     <a class="btn btn-default" href="{% url 'add_name_rf' %}" role="button">Add new fluoroscopy entry</a>
-    <a class="btn btn-default" href="{% url 'update_all_std_names' modality='RF' %}" role="button">Update database for fluoroscopy entries</a>
+    <a class="btn btn-default" href="{% url 'update_all_std_names_form' modality='RF' %}" role="button">Update database for fluoroscopy entries</a>
 {% endif %}
 
 <a id="mammo" class="vert-offset">
@@ -93,7 +93,7 @@
 <span id="MG-names">Querying the database for standard names, please wait</span>
 {% if admin.admingroup %}
     <a class="btn btn-default" href="{% url 'add_name_mg' %}" role="button">Add new mammography entry</a>
-    <a class="btn btn-default" href="{% url 'update_all_std_names' modality='MG' %}" role="button">Update database for mammography entries</a>
+    <a class="btn btn-default" href="{% url 'update_all_std_names_form' modality='MG' %}" role="button">Update database for mammography entries</a>
 {% endif %}
 
 <a id="dx" class="vert-offset">
@@ -102,7 +102,7 @@
 <span id="DX-names">Querying the database for standard names, please wait</span>
 {% if admin.admingroup %}
     <a class="btn btn-default" href="{% url 'add_name_dx' %}" role="button">Add new radiography entry</a>
-    <a class="btn btn-default" href="{% url 'update_all_std_names' modality='DX' %}" role="button">Update database for radiographic entries</a>
+    <a class="btn btn-default" href="{% url 'update_all_std_names_form' modality='DX' %}" role="button">Update database for radiographic entries</a>
 {% endif %}
 
 {% endblock %}
