--- a/openrem/remapp/templates/remapp/standardnamesettings_form.html
+++ b/openrem/remapp/templates/remapp/standardnamesettings_form.html
@@ -14,11 +14,24 @@
 {% block mainblock %}
 
       <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col-md-4 col-md-offset-3">
           <h3>Modify standard name mapping settings</h3>
         {% if admin.admingroup %}
             {% load crispy_forms_tags %}
             {% crispy form %}
+
+          <br>
+          <h3>Refresh standard name internal database links</h3>
+            <p>Use the hyperlinks below to force an update of the internal database links between the standard name
+                table and the study and acquisition tables. Note that use of these links is not expected to be necessary
+                in normal OpenREM use.</p>
+            <ul>
+                <li><a href="{% url 'update_all_std_names_form' modality='CT' %}" role="button">CT</a></li>
+                <li><a href="{% url 'update_all_std_names_form' modality='RF' %}" role="button">Fluoroscopy</a></li>
+                <li><a href="{% url 'update_all_std_names_form' modality='MG' %}" role="button">Mammography</a></li>
+                <li><a href="{% url 'update_all_std_names_form' modality='DX' %}" role="button">Radiography</a></li>
+            </ul>
+
         {% else %}
             <p>Only users in the Admin group can modify these settings.</p>
         {% endif %}
